jvmArgs enable preview for modern main method
Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>