@@ -17,6 +17,11 @@ tasks.withType<JavaCompile>().configureEach {
   options.compilerArgs.add("--enable-preview")
 }
 
+tasks.withType<JavaExec>().configureEach {
+  jvmArgs("--enable-preview")
+}
+
+
 spotless {
   lineEndings = PLATFORM_NATIVE
   kotlin {
